saving business is working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Yami">
         <activity
+            android:name=".AdminAddBusinessActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoginPageActivity"
             android:exported="false"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
